Updating splash screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<h1><font color="white"><p color="white">TrueBlocks Account Explorer</font></h1>
 			<img src="loading.gif">
 			<p>
-			<font size="+1" color="orangeyellow">Please wait while we load the world's<br>first 100% decentralized Ethereum account explorer</font>
+			<font size="+1" color="orangeyellow">Please wait while we load the world's<br>only truly-decentralized <font color="white">Account Explorer</font></font>
 		</center>
 	</body>
 </html>
